# dtocean-database

./: .dvcignore  .gitattributes  .gitignore  CHANGELOG.md  INSTALLATION.md  LICENSE.txt  README.md  docker-compose.build.yml  docker-compose.yml  export.dvc  pyproject.toml  schema.sql
.dvc/: config
.github/workflows/: buildtest.yaml  release.yaml  up.yaml
pgadmin4/: Dockerfile  config.py
postgresql/: 20_user.sh  30_admin.sh  40_schema.sh  50_restore.sh  Dockerfile  admin.sql  schema.sql
scripts/: get_dvc_md5.py
tests/: test_init.py
